--- a/index.html
+++ b/index.html
@@ -4,108 +4,17 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<style>
-	table,tr,th,td {
-		margin:0;
-		padding:0;
-	}
-	.table1 {
-		width:600px;
+	.red {
+		width:300px;
+		height:200px;
 		margin:0 auto;
-		margin-top:30px;
-		text-align: left;
-		border-collapse: collapse;
-		border:1px solid #ccc;
-	}
-	.table1 th {
-		background-color: #4CAF50;
-		color: #fff;
-		padding:8px;
-		margin:0;
-	}
-	th,td {
-		padding: 8px;
-	}
-	tr {
-		border-bottom:1px solid #ccc;
-	}
-	tr:nth-child(even) {
-		background-color: #eee;
-	}
-	.table1.two th {
-		background-color: #fff;
-		color:#000;
+		background: red;
 	}
 
 	</style>
 </head>
 <body>
-<table class="table1">
-<tbody>
-	<tr>
-		<th>First Name</th>
-		<th>Last Name</th>
-		<th>Points</th>
-	</tr>
-	<tr>
-		<td>Jill</td>
-		<td>Smith</td>
-		<td>50</td>
-	</tr>
-	<tr>
-		<td>Eve</td>
-		<td>Jackson</td>
-		<td>	94</td>
-	</tr>
-	<tr>
-		<td>Adam</td>
-		<td>	Johnson</td>
-		<td>	67</td>
-	</tr>
-	<tr>
-		<td>Bo</td>
-		<td>Nilsson</td>
-		<td>	50</td>
-	</tr>
-	<tr>
-		<td>Mike</td>
-		<td>	Ross</td>
-		<td>	35</td>
-	</tr>
-	</tbody>
-</table>
-	<table class="table1 two">
-<tbody>
-	<tr>
-		<th>First Name</th>
-		<th>Last Name</th>
-		<th>Points</th>
-	</tr>
-	<tr>
-		<td>Jill</td>
-		<td>Smith</td>
-		<td>50</td>
-	</tr>
-	<tr>
-		<td>Eve</td>
-		<td>Jackson</td>
-		<td>	94</td>
-	</tr>
-	<tr>
-		<td>Adam</td>
-		<td>	Johnson</td>
-		<td>	67</td>
-	</tr>
-	<tr>
-		<td>Bo</td>
-		<td>Nilsson</td>
-		<td>	50</td>
-	</tr>
-	<tr>
-		<td>Mike</td>
-		<td>	Ross</td>
-		<td>	35</td>
-	</tr>
-	</tbody>
-</table>
+	<div class="red">
+	</div>
 </body>
 </html>
